# android

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CLAUDE.md  CLAUDE_CN.md  LICENSE  README-Old-Version.md  README.md  build.gradle  build.gradle.kts  change_auth.sh  change_git_user.sh  detekt.yml  gradle.properties  gradle.properties.template  jacoco.gradle  jacoco.gradle.kts  jitpack.yml  settings.gradle  settings.gradle.kts
.claude/: settings.local.json
.claude/commands/: save-solution.md
.claude/memory/: MEMORY.md  feedback_docs_directory.md  feedback_no_coauthor.md  project_cmake_ndk_versions.md  user_language.md
.claude/rules/: personal-style.md
00-documents/: KEYSTORE_SECURITY_GUIDE.md  android-native-build-output-directories.md  claude-codex-mapping.md  claude-codex-mapping.zh-CN.md  git-lfs-guide-zh.md  git-lfs-guide.md  git-lfs-migration-troubleshooting-zh.md  git-lfs-migration-troubleshooting.md
00-documents/framework/: AndroidShowcase_Framework_And_Coding_Standard.md  AndroidShowcase_Framework_And_Coding_Standard_EN.md
01-tools/: change_auth.sh  generate-keystore.sh
10-configs/: detekt.yml
10-configs/sign/: keystore.properties
adpcm-ima-qt-codec/: README.md  build.gradle.kts
adpcm-ima-qt-codec-h264-hevc-decoder/: build.gradle.kts
adpcm-ima-qt-codec-h264-hevc-decoder-sdk/: README.md  build.gradle  build.gradle.kts
adpcm-ima-qt-codec-sdk/: .gitignore  README.md  build.gradle  build.gradle.kts
adpcm-ima-qt-sdk/: .gitignore  README.md  build.gradle
aidl-client/: build.gradle  build.gradle.kts
androidbase/: build.gradle  build.gradle.kts
androidbase-sdk/: build.gradle  build.gradle.kts  proguard-rules.pro
audio/: build.gradle.kts
audio-sdk/: build.gradle  build.gradle.kts  proguard-rules.pro
audiorecord-sdk/: build.gradle
basenetty/: build.gradle.kts
basenetty-sdk/: build.gradle  build.gradle.kts
camera2live/: build.gradle.kts
camera2live-sdk/: build.gradle  build.gradle.kts  proguard-rules.pro
camerax/: README.md  build.gradle.kts
camerax-sdk/: README.md  build.gradle  build.gradle.kts
cameraxlive-sdk/: build.gradle
circle-progressbar/: build.gradle.kts
circle-progressbar-sdk/: .gitignore  build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
demo/: build.gradle  build.gradle.kts  proguard-rules.pro
demo-dex/: README.md  build.gradle  build.gradle.kts
demo-dex/scripts/: automation.py  (+1 more)
dex/: build.gradle.kts
dex-sdk/: build.gradle  build.gradle.kts
draw-on-screen/: build.gradle.kts
draw-on-screen-sdk/: build.gradle.kts
drawOnScreen-sdk/: build.gradle  build.gradle.kts  consumer-rules.pro
ffmpeg-javacpp/: .gitignore  build.gradle.kts
ffmpeg-javacpp-sdk/: build.gradle  build.gradle.kts
ffmpeg-sdk/: .gitignore  H.264.md  README.md  build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ffmpeg-sdk/src/main/cpp/: CMakeLists.txt
ffmpeg-sdk/src/main/cpp/adpcm_ima_qt_decoder/: adpcm_ima_qt_decoder.cpp  adpcm_ima_qt_decoder.h  native_adpcm_ima_qt_decoder.cpp
ffmpeg-sdk/src/main/cpp/adpcm_ima_qt_encoder/: adpcm_ima_qt_encoder.cpp  adpcm_ima_qt_encoder.h  native_adpcm_ima_qt_encoder.cpp  native_adpcm_ima_qt_encoder.h
ffmpeg-sdk/src/main/cpp/h264_hevc_decoder/: h264_hevc_decoder_all_in_one_file.cpp
ffmpeg-sdk/src/main/pure_c_src/resample_transcode_aac/: CMakeLists.txt  README.md  cmn_util.c  cmn_util.h  ffmpeg_util.c  ffmpeg_util.h  resample_transcode_aac.c
floatview/: build.gradle.kts
floatview-sdk/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
h264-hevc-decoder/: README.md  build.gradle.kts
h264-hevc-decoder-sdk/: build.gradle  build.gradle.kts
http/: build.gradle.kts
http-sdk/: build.gradle  build.gradle.kts
jpeg/: CMakeLists.txt  README.md  build.gradle.kts  copy_necessary_files_from_jpeg_burbo.sh
jpeg-sdk/: CMakeLists.txt  README.md  build.gradle  build.gradle.kts  copy_necessary_files_from_jpeg_burbo.sh
jpeg-sdk/src/main/cpp/: JPEGNative.cpp
jpeg-sdk/src/main/cpp/include/: jerror.h  jpeglib.h  turbojpeg.h
jpeg-sdk/src/main/java/com/leovp/jpeg_sdk/: JPEGUtil.kt
jpeg-sdk/src/main/kotlin/com/leovp/jpeg/: JPEGUtil.kt
lib-bytes/: build.gradle  build.gradle.kts
lib-common-android/: build.gradle  build.gradle.kts
lib-common-kotlin/: build.gradle  build.gradle.kts  proguard-rules.pro
lib-compose/: build.gradle.kts
lib-compress/: build.gradle  build.gradle.kts
lib-exception/: build.gradle
lib-exif/: build.gradle  build.gradle.kts
lib-image/: .gitignore  README.md  build.gradle  build.gradle.kts
lib-image/src/main/cpp/: BitmapRotateNative.cpp  CMakeLists.txt
lib-json/: build.gradle  build.gradle.kts  consumer-rules.pro
lib-mvvm/: build.gradle.kts
lib-network/: build.gradle  build.gradle.kts
lib-reflection/: build.gradle  build.gradle.kts
libjpeg-turbo/: .gitignore  00_build_jpeg.sh  00_config.sh  README.md
libjpeg-turbo-main/: .gitignore  00_build_jpeg.sh  00_build_jpeg_all.sh  00_config.sh  README.md
log/: build.gradle.kts
log-sdk/: build.gradle  build.gradle.kts  consumer-rules.pro
mediacodec-sdk/: build.gradle
min-base-sdk/: build.gradle
nfc/: build.gradle.kts
opengl/: build.gradle.kts
opengl-sdk/: .gitignore  README.md  build.gradle  build.gradle.kts
pref/: build.gradle.kts
pref-sdk/: build.gradle  build.gradle.kts
screencapture/: build.gradle.kts
screencapture-sdk/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
webrtc/: build.gradle
webrtc-sdk/: build.gradle
x264/: .gitignore  README.md  build.gradle
yuv/: CMakeLists.txt  README.md  build.gradle.kts  compile_all_in_one.sh  libyuv-20260514.tar.xz
yuv-sdk/: CMakeLists.txt  README.md  build.gradle  build.gradle.kts  compile_all_in_one.sh
yuv-sdk/src/main/: AndroidManifest.xml
yuv-sdk/src/main/cpp/: YUVBase.cpp  YUVBase.h  YUVUtil.cpp  YuvConvert.cpp  YuvConvert.h  YuvUtilNative.cpp  logger.h
yuv-sdk/src/main/java/com/leovp/yuv_sdk/: YUVUtil.kt  YuvUtil.kt
yuv-sdk/src/main/kotlin/com/leovp/yuv/: YuvUtil.kt
yuv-sdk/src/main/kotlin/com/leovp/yuv_sdk/: YuvUtil.kt
(+3212 files in other folders)
